# codec-carver

./: .coverage  .coveragerc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  audio_library.py  bench10.py  bench11.py  bench12.py  bench13.py  bench14.py  bench3.py  bench4.py  bench5.py  bench6.py  bench7.py  bench8.py  bench9.py  bench_walk_vs_scandir.py  benchmark.py  benchmark2.py  chapters.py  config_file.py  coverage.xml  diarize.py  docker-compose.yml  fix_all_docstrings.py  fix_media_shrinker.py  job_store.py  mcp_driver.py  media_shrinker.py  opencode.jsonc  plan.md  plan2.md  pr_desc.txt  pr_description.md  (+29 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  opencode-review.yml  pr-review-merge-scheduler.yml  scheduled-pr-review-merge.yml  strix.yml
.jules/: bolt.md  palette.md  sentinel.md
docs/: EXAMPLES.md
docs/architecture/: gpu-transcription-rust-backend.md
docs/papers/: README.md
fuzz/: README.md  fuzz_build_segments.py  fuzz_parse_probe_payload.py  fuzz_parse_silencedetect.py  requirements-dev.txt  requirements-fuzz.txt
fuzz/corpus/parse_silencedetect/: end_before_start.txt  negative_start_head.txt  no_silence.txt  repeated_start.txt  two_intervals.txt  typical.txt  zero_length.txt
rust-core/: Cargo.toml
rust-core/src/: lib.rs  main.rs
scripts/: bootstrap_macos_gpu_runtime.sh  pr_review_merge.py
scripts/ci/: opencode_review_normalize_output.py  strix_quick_gate.sh  test_strix_quick_gate.sh
tests/: test_audio_library.py  test_chapters.py  test_ci_workflow.py  test_config_file.py  test_diarize.py  test_fuzz_properties.py  test_job_store.py  test_macos_gpu_bootstrap.py  test_mcp_driver.py  test_media_shrinker.py  test_pr_review_merge.py  test_remote_input.py  test_saas_web.py  test_security.py  test_security_path_traversal.py  test_subtitles.py  test_summarize.py  test_transcribe.py  test_transcript_search.py  test_usage_metering.py
