[package]
name = "codec-carver-core"
version = "0.1.0"
edition = "2024"
description = "High-throughput filesystem backend for Codec Carver audio libraries"
license = "MIT"

[[bin]]
name = "codec-carver-core"
path = "src/main.rs"
test = false

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
unicode-normalization = "0.1"
walkdir = "2.5"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "block2", "NSError", "NSFileCoordinator", "NSFileManager", "NSString", "NSURL"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
